# Language-teacher-cli

./: README.md  config.py  existing_hanzi_sorted.txt  install.sh  level4_hanzi.txt  main.py  pinyin_fallback.py  pyproject.toml  requirements.txt  translate.py  tts.py
language_teacher/: config.py  drill.py  history.py  hsk.py  hsk_data.py  main.py  pinyin_fallback.py  progress.py  translate.py  tts.py  typing_practice.py  vocab.py
language_teacher/hsk_data/: __init__.py  level1.py  level2.py  level3.py  level4.py  level5.py
tests/: test_config.py  test_drill.py  test_history.py  test_hsk.py  test_hsk_data.py  test_progress.py  test_translate.py  test_vocab.py
