[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "language-teacher-cli"
version = "1.0.0"
description = "A multilingual language teacher CLI powered by Edge-TTS and MyMemory translation"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = [
    "typer[all]>=0.9.0",
    "requests>=2.28.0",
    "rich>=13.0.0",
    "edge-tts>=6.1.0",
    "pypinyin>=0.49.0",
]

[project.scripts]
language-teacher = "language_teacher.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["language_teacher*"]
